--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ body {
   max-width: 1440px;
   padding-inline: 56px; 
 }
+
+@media(max-width: 600px) {
+  .container {
+    padding: 0px 24px 24px;
+  }
+}
